--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Website</title>
+    <title>Tianlong Nan's Homepage</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,10 +25,13 @@
             padding: 0;
             text-align: center;
             background-color: #444;
+            font-size: x-large;
         }
         nav a {
             color: #fff;
-            padding: 1rem;
+            padding: 0.5rem;
+            padding-left: 5rem;
+            padding-right: 5rem;
             display: inline-block;
             text-decoration: none;
         }
@@ -33,7 +39,24 @@
             background-color: #555;
         }
         main {
+            max-width: 1200px;
+            margin: auto;
             padding: 2rem;
+            font-size: large;
+        }
+        #profile {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 2rem;
+        }
+        #profile-pic {
+            float: left;
+            width: 30%;
+        }
+        #bio {
+            float: right;
+            width: 70%;
         }
         footer {
             background-color: #333;
@@ -48,29 +71,39 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Personal Website</h1>
+        <h1>Welcome to Tianlong Nan's Homepage</h1>
     </header>
     <nav>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="#home">Home</a>
+        <a href="#research">Research</a>
+        <a href="#cv">CV</a>
     </nav>
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Hi there, I am Tianlong Nan.</p>
-        </section>
-        <section id="projects">
-            <h2>Projects</h2>
-            <p>Showcase your projects here.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Provide your contact information here.</p>
-        </section>
-    </main>
+    <div id="container">
+        <main>
+            <section id="home">
+                <div id="profile">
+                    <div id="profile-pic">
+                        <img src="profile.jpg" alt="Profile Picture" style="width: 100%; height: auto;">
+                    </div>
+                    <div id="bio">
+                        <h2>Tianlong Nan</h2>
+                        <h3>PhD Student at Columbia IEOR</h3>
+                        <p>Hi there, I am Tianlong Nan.</p>
+                    </div>
+                </div>
+            </section>
+            <section id="research">
+                <h2>Research Interest</h2>
+                    <p>Showcase your projects here.</p>
+                <h2>Publications and Submitted Papers</h2>
+                    <p>Showcase your projects here.</p>
+                <h2>Working Papers</h2>
+                    <p>Showcase your projects here.</p>
+            </section>
+        </main>
+    </div>
     <footer>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 Tianlong Nan. All rights reserved.</p>
     </footer>
 </body>
 </html>
