--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                     <div id="bio">
                         <h2>Tianlong Nan</h2>
                         <h3>PhD Student at Columbia IEOR</h3>
+                        <h3>Email: tianlong.nan@columbia.edu</h3>
                         <p>Hi there, I am Tianlong Nan.</p>
                     </div>
                 </div>
