--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +17,8 @@
             color: #fff;
             padding: 1rem;
             text-align: center;
+            font-size: large;
+            padding-left: 3rem;
         }
         nav {
             margin: 0;
@@ -58,6 +58,56 @@
             float: right;
             width: 70%;
         }
+        h2 {
+            position: relative;
+            padding: 0;
+            margin: 0;
+            font-family: "Raleway", sans-serif;
+            font-weight: 300;
+            font-size: 40px;
+            color: #080808;
+            /* -webkit-transition: all 0.4s ease 0s;
+            -o-transition: all 0.4s ease 0s;
+            transition: all 0.4s ease 0s; */
+        }
+
+        /* h2 span {
+            display: block;
+            font-size: 0.5em;
+            line-height: 1.3;
+        } */
+        h2 em {
+            font-style: normal;
+            font-weight: 600;
+        }
+
+        .research-section h2 {
+            font-weight: 100;
+            letter-spacing: 0;
+            line-height: 1.5em;
+            padding-bottom: 15px;
+            position: relative;
+            padding-left: 10px;
+        }
+        .research-section h2:before {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            height: 5px;
+            width: 5px;
+            background-color: #111;
+        }
+        .research-section h2:after {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: 2px;
+            height: 1px;
+            width: 95%;
+            max-width: 500px;
+            background-color: #333;
+        }
         footer {
             background-color: #333;
             color: #fff;
@@ -71,11 +121,11 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Tianlong Nan's Homepage</h1>
+        <h1>Tianlong Nan</h1>
     </header>
     <nav>
         <a href="#home">Home</a>
-        <a href="#research">Research</a>
+        <a href="#research">Research & Publications</a>
         <a href="#cv">CV</a>
     </nav>
     <div id="container">
@@ -83,23 +133,29 @@
             <section id="home">
                 <div id="profile">
                     <div id="profile-pic">
-                        <img src="profile.jpg" alt="Profile Picture" style="width: 100%; height: auto;">
+                        <img src="./profile.jpg" alt="Profile Picture" style="width: 80%; height: auto;">
                     </div>
                     <div id="bio">
-                        <h2>Tianlong Nan</h2>
-                        <h3>PhD Student at Columbia IEOR</h3>
-                        <h3>Email: tianlong.nan@columbia.edu</h3>
+                        <!-- <h2>Tianlong Nan</h2>
+                        <h3>PhD Student at Columbia IEOR</h3> -->
                         <p>Hi there, I am Tianlong Nan.</p>
+                        <h3>Email: tianlong.nan@columbia.edu</h3>
                     </div>
                 </div>
             </section>
             <section id="research">
-                <h2>Research Interest</h2>
+                <div class="research-section">
+                    <h2> Research Interest</h2>
                     <p>Showcase your projects here.</p>
-                <h2>Publications and Submitted Papers</h2>
+                </div>
+                <div class="research-section">
+                <h2>Articles</h2>
                     <p>Showcase your projects here.</p>
+                </div>
+                <div class="research-section">
                 <h2>Working Papers</h2>
                     <p>Showcase your projects here.</p>
+                </div>
             </section>
         </main>
     </div>
