--- a/index.html
+++ b/index.html
@@ -142,13 +142,18 @@
             width: 100%;
             bottom: 0;
         }
-        h3 {
+        .contact p {
             font-family:'Times New Roman', Times, serif;
             white-space: pre;
             font-size: x-large;
             margin: 0px;
             padding-bottom: 10px;
         }
+        .contact a {
+            color: #000;
+            text-decoration: underline; 
+        }
+
         /* customize the buttons with curves */
         .arXiv {
             display: inline;
@@ -210,9 +215,11 @@
                             I'm a third-year PhD student in Operations Research at Columbia University, advised by Prof. <a href="https://www.columbia.edu/~ck2945/">Christian Kroer</a>. 
                             My research focuses on problems at the intersection of optimization, game theory, and artificial intelligence. 
                             I completed my undergraduate studies at Peking University. </p>
-                        <h3><i style="font-size:24px" class="fa">&#xf0e0;</i>  <a href="mailto:tianlong.nan@columbia.edu">tianlong.nan@columbia.edu</a></h3>
-                        <h3><i style="font-size:24px" class="fa">&#xf1ad;</i>   Mudd 331</h3>
-                        <h3><i style='font-size:24px' class='fa'>&#xf041;</i>    500 W 120th St, New York, NY 10027</h3>
+                        <div class="contact">
+                            <p><i style="font-size:24px" class="fa">&#xf0e0;</i>  <a href="mailto:tianlong.nan@columbia.edu">tianlong.nan@columbia.edu</a></p>
+                            <p><i style="font-size:24px" class="fa">&#xf1ad;</i>   Mudd 331</p>
+                            <p><i style='font-size:24px' class='fa'>&#xf041;</i>    500 W 120th St, New York, NY 10027</p>
+                        </div>
                     </div>
                 </div>
             </section>
