--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                         <!-- <h2>Tianlong Nan</h2>
                         <h3>PhD Student at Columbia IEOR</h3> -->
                         <p> Welcome! 
-                            I'm a third-year PhD student in Operations Research at Columbia University, advised by Prof. <a href="https://www.columbia.edu/~ck2945/">Christian Kroer</a>. 
+                            I'm a third-year PhD student in Operations Research at Columbia University, advised by Prof. <a href="https://www.columbia.edu/~ck2945/" target="_blank">Christian Kroer</a>. 
                             My research focuses on problems at the intersection of optimization, game theory, and artificial intelligence. 
                             I completed my undergraduate studies at Peking University. </p>
                         <div class="contact">
@@ -242,7 +242,7 @@
                             On the Convergence of Tâtonnement for Linear Fisher Markets. <em>Submitted</em>. 
                             <p>Tianlong Nan, Yuan Gao, Christian Kroer.</p>
                             <div class="arXiv"> 
-                                <a href="https://arxiv.org/abs/2406.12526"><button>arXiv</button></a>
+                                <a href="https://arxiv.org/abs/2406.12526" target="_blank"><button>arXiv</button></a>
                             </div>
                         </li>
                         <br>
@@ -251,7 +251,7 @@
                             Competitive Equilibrium for Chores: from Dual Eisenberg-Gale to a Fast, Greedy, LP-based Algorithm. <em>ACM Economics and Computation</em>, 2024.
                             <p>Bhaskar Ray Chaudhury, Christian Kroer, Ruta Mehta, Tianlong Nan (in alphabetical order).</p>
                             <div class="arXiv">
-                                <a href="https://arxiv.org/abs/2402.10439"><button>arXiv</button></a>
+                                <a href="https://arxiv.org/abs/2402.10439" target="_blank"><button>arXiv</button></a>
                             </div>
                             <ul>
                                 <li>Journal version submitted to Operations Research.</li>
@@ -263,10 +263,10 @@
                             Fast and Interpretable Dynamics for Fisher Markets via Block-Coordinate Updates. <em>AAAI</em>, 2023.
                             <p>Tianlong Nan, Yuan Gao, Christian Kroer.</p> 
                             <div class="AAAI">
-                                <a href="https://ojs.aaai.org/index.php/AAAI/article/view/25723"><button>AAAI</button></a>
+                                <a href="https://ojs.aaai.org/index.php/AAAI/article/view/25723" target="_blank"><button>AAAI</button></a>
                             </div>  
                             <div class="arXiv">
-                                <a href="https://arxiv.org/abs/2303.00506"><button>arXiv</button></a>
+                                <a href="https://arxiv.org/abs/2303.00506" target="_blank"><button>arXiv</button></a>
                             </div>
                         </li>
                     </ul>
@@ -278,7 +278,7 @@
                             Convergence of Extragradient SVRG for Variational Inequalities: Error Bounds and Increasing Iterate Averaging. 
                             <p>Tianlong Nan, Yuan Gao, Christian Kroer.</p>
                             <div class="arXiv">
-                                <a href="https://arxiv.org/abs/2306.01796"><button>arXiv</button></a>
+                                <a href="https://arxiv.org/abs/2306.01796" target="_blank"><button>arXiv</button></a>
                             </div>
                         </li>
                     </ul>
