--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         #bio p {
             display: block;
         }
-        #contact p {
+        .contact {
             font-family:'Times New Roman', Times, serif;
             white-space: pre;
             font-size: x-large;
@@ -153,7 +153,7 @@
             padding-bottom: 10px;
             /* display: inline; */
         }
-        #contact a {
+        .contact a {
             color: #000;
             text-decoration: underline; 
         }
@@ -217,6 +217,7 @@
                         <!-- <h2>Tianlong Nan</h2>
                         <h3>PhD Student at Columbia IEOR</h3> -->
                         <p id="bio"> 
+                            <br>
                             Welcome! 
                             I'm a third-year PhD student in Operations Research at Columbia University, advised by Prof. <a href="https://www.columbia.edu/~ck2945/" target="_blank">Christian Kroer</a>. 
                             My research focuses on problems at the intersection of optimization, game theory, and artificial intelligence. 
@@ -228,9 +229,9 @@
                             <li></li>
                             <li></li>
                         </ul> -->
-                        <p id="contact"><i style="font-size:24px" class="fa">&#xf0e0;</i>  <a href="mailto:tianlong.nan@columbia.edu">tianlong.nan@columbia.edu</a></p>
-                        <p><i style="font-size:24px" class="fa">&#xf1ad;</i>   Mudd 331</p>
-                        <p><i style='font-size:24px' class='fa'>&#xf041;</i>    500 W 120th St, New York, NY 10027</p>
+                        <p class="contact"><i style="font-size:24px" class="fa">&#xf0e0;</i>  <a href="mailto:tianlong.nan@columbia.edu">tianlong.nan@columbia.edu</a></p>
+                        <p class="contact"><i style="font-size:24px" class="fa">&#xf1ad;</i>   Mudd 331</p>
+                        <p class="contact"><i style='font-size:24px' class='fa'>&#xf041;</i>    500 W 120th St, New York, NY 10027</p>
                         <!-- </div> -->
                     <!-- </div> -->
                 </div>
