--- a/index.html
+++ b/index.html
@@ -300,11 +300,11 @@
                             Competitive Equilibrium for Chores: from Dual Eisenberg-Gale to a Fast, Greedy, LP-based Algorithm. <em>ACM Economics and Computation</em>, 2024.
                             <p>Bhaskar Ray Chaudhury, Christian Kroer, Ruta Mehta, Tianlong Nan (in alphabetical order).</p>
                             <div class="ACM-EC">
-                                <button onclick="displayText()">ACM EC</button>
+                                <button title="The proceeding is not online yet, please see the arXiv version.">ACM EC</button>
                             </div>
-                            <div id="textField" style="display: none;">
+                            <!-- <div id="textField" style="display: none;">
                                 The proceeding is not online yet.
-                            </div>
+                            </div> -->
                             <div class="arXiv">
                                 <a href="https://arxiv.org/abs/2402.10439" target="_blank"><button>arXiv</button></a>
                             </div>
