--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                 <button onclick="toggleText()">ACM EC</button>
                             </div>
                             <div id="textField" style="display: none;">
-                                The proceeding is not online yet, please see the arXiv version. 
+                                The proceeding has not been online yet, please see the arXiv version. 
                             </div>
                             <div class="arXiv">
                                 <a href="https://arxiv.org/abs/2402.10439" target="_blank"><button>arXiv</button></a>
