--- a/index.html
+++ b/index.html
@@ -299,8 +299,11 @@
                             On the Convergence of Tâtonnement for Linear Fisher Markets. <em>AAAI</em>, 2025. 
                             <p>Tianlong Nan, Yuan Gao, Christian Kroer.</p>
                             <div class="AAAI">
-                                <button>AAAI</button>
+                                <button onclick="toggleText()>AAAI</button>
                             </div> 
+                            <div id="textField" style="display: none;">
+                                The proceeding has not been online yet, please see the arXiv version.
+                            </div>
                             <div class="arXiv"> 
                                 <a href="https://arxiv.org/abs/2406.12526" target="_blank"><button>arXiv</button></a>
                             </div>
@@ -312,9 +315,6 @@
                             <p>Bhaskar Ray Chaudhury, Christian Kroer, Ruta Mehta, Tianlong Nan (in alphabetical order).</p>
                             <div class="ACM-EC">
                                 <a href="https://dl-acm-org.ezproxy.cul.columbia.edu/doi/10.1145/3670865.3673516" target="_blank"><button onclick="toggleText()">ACM EC</button></a>
-                            </div>
-                            <div id="textField" style="display: none;">
-                                The proceeding has not been online yet, please see the arXiv version. 
                             </div>
                             <div class="arXiv">
                                 <a href="https://arxiv.org/abs/2402.10439" target="_blank"><button>arXiv</button></a>
@@ -361,7 +361,7 @@
         </main>
     </div>
     <footer>
-        <p>&copy; 2024 Tianlong Nan. All rights reserved.</p>
+        <p>&copy; Last updated on Dec 20, 2024. All rights reserved.</p>
     </footer>
 </body>
 </html>
