--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                             On the Convergence of Tâtonnement for Linear Fisher Markets. <em>AAAI</em>, 2025. 
                             <p>Tianlong Nan, Yuan Gao, Christian Kroer.</p>
                             <div class="AAAI">
-                                <button onclick="toggleText()>AAAI</button>
+                                <button onclick="toggleText()">AAAI</button>
                             </div> 
                             <div id="textField" style="display: none;">
                                 The proceeding has not been online yet, please see the arXiv version.
