--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         </main>
     </div>
     <footer>
-        <p>&copy; Last updated on Dec 20, 2024. All rights reserved.</p>
+        <p>Last updated on Dec 20, 2024.</p>
     </footer>
 </body>
 </html>
