--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #d9e8fc;
         }
         header {
-            background-color: #333;
+            background-color: #000000;
             color: #fff;
             padding: 1rem;
             text-align: center;
@@ -27,7 +27,7 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            background-color: #444;
+            background-color: #093552;
             font-size: x-large;
         }
         nav a {
@@ -39,7 +39,8 @@
             text-decoration: none;
         }
         nav a:hover {
-            background-color: #555;
+            background-color: #d9e8fc;
+            color: #000;
         }
         main {
             max-width: 1200px;
@@ -134,7 +135,7 @@
             font-size: x-large;
         }
         footer {
-            background-color: #333;
+            background-color: #000000;
             color: #fff;
             text-align: center;
             padding: 1rem;
@@ -146,7 +147,7 @@
             display: block;
         }
         .contact {
-            font-family:'Times New Roman', Times, serif;
+            /* font-family:'Times New Roman', Times, serif; */
             white-space: pre;
             font-size: x-large;
             margin: 0px;
@@ -264,15 +265,9 @@
                             My research focuses on problems at the intersection of optimization, game theory, and artificial intelligence. 
                             I completed my undergraduate studies at Peking University. 
                         </p>
-                        <!-- <div class="contact"> -->
-                        <!-- <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul> -->
-                        <p class="contact"><i style="font-size:24px" class="fa">&#xf0e0;</i>  <a href="mailto:tianlong.nan@columbia.edu">tianlong.nan@columbia.edu</a></p>
-                        <p class="contact"><i style="font-size:24px" class="fa">&#xf1ad;</i>   Mudd 331</p>
-                        <p class="contact"><i style='font-size:24px' class='fa'>&#xf041;</i>    500 W 120th St, New York, NY 10027</p>
+                        <p class="contact"><img src="mail_72dp_000000_FILL0_wght700_GRAD200_opsz48.png" alt="" style="width: 23px; height: auto;">  <a href="mailto:tianlong.nan@columbia.edu">tianlong.nan@columbia.edu</a></p>
+                        <p class="contact"><img src="meeting_room_72dp_000000_FILL0_wght700_GRAD200_opsz48.png" alt="" style="width: 23px; height: auto;">  Mudd 331</p>
+                        <p class="contact"><img src="home_pin_72dp_000000_FILL0_wght700_GRAD200_opsz48.png" alt="" style="width: 23px; height: auto;">  500 W 120th St, New York, NY 10027</p>
                         <!-- </div> -->
                     <!-- </div> -->
                 </div>
@@ -296,7 +291,7 @@
                 <h2>Articles</h2>
                     <ul>
                         <li>
-                            On the Convergence of Tâtonnement for Linear Fisher Markets. <em>AAAI</em>, 2025. 
+                            On the Convergence of Tâtonnement for Linear Fisher Markets. <em>AAAI</em>, 2025 (Oral). 
                             <p>Tianlong Nan, Yuan Gao, Christian Kroer.</p>
                             <div class="AAAI">
                                 <button onclick="toggleText()">AAAI</button>
@@ -326,7 +321,7 @@
                         <br>
 
                         <li>
-                            Fast and Interpretable Dynamics for Fisher Markets via Block-Coordinate Updates. <em>AAAI</em>, 2023.
+                            Fast and Interpretable Dynamics for Fisher Markets via Block-Coordinate Updates. <em>AAAI</em>, 2023 (Oral).
                             <p>Tianlong Nan, Yuan Gao, Christian Kroer.</p> 
                             <div class="AAAI">
                                 <a href="https://ojs.aaai.org/index.php/AAAI/article/view/25723" target="_blank"><button>AAAI</button></a>
