--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #d9e8fc;
+            background-color: #ecfaec;
         }
         header {
             background-color: #000000;
@@ -27,7 +27,7 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            background-color: #093552;
+            background-color: #102008a4;
             font-size: x-large;
         }
         nav a {
@@ -39,7 +39,7 @@
             text-decoration: none;
         }
         nav a:hover {
-            background-color: #d9e8fc;
+            background-color: #ecfaec;
             color: #000;
         }
         main {
