--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ecfaec;
+            background-color: #f4f9f4;
         }
         header {
             background-color: #000000;
