Update the color of navigation labels with mouse staying on it

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             text-decoration: none;
         }
         nav a:hover {
-            background-color: #ecfaec;
+            background-color: #f4f9f4;
             color: #000;
         }
         main {
