Add name in the welcome message

--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
                         <p id="bio"> 
                             <br>
                             Welcome! 
+                            My name is Tianlong Nan. 
                             I'm a third-year PhD student in Operations Research at Columbia University, advised by Prof. <a href="https://www.columbia.edu/~ck2945/" target="_blank">Christian Kroer</a>. 
                             My research focuses on problems at the intersection of optimization, game theory, and artificial intelligence. 
                             I completed my undergraduate studies at Peking University. 
